<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_gradient_animation_list"
    tools:context=".activity.NetWorthTrackingActivity"
    tools:showIn="@layout/activity_net_worth_tracking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"></LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/select_currency"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/currency"
                android:textAlignment="textEnd"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/net_worth"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_net_worth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="3"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/assets"
                android:textColor="@color/green"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/cash_and_investments"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_cash_investment"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:divider="@color/white"
            android:dividerHeight="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/long_term_assets"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_long_term_assets"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:divider="@color/white"
            android:dividerHeight="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/other"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/white"
            android:dividerHeight="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/total_assets"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_total_assets"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="3"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:textSize="20dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/liabilities"
                android:textColor="@color/green"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/short_term_liabilities"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_short_term_liabilities"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:divider="@color/white"
            android:dividerHeight="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/long_term_debts"
                android:textSize="20dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_long_term_debts"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:divider="@color/white"
            android:dividerHeight="1dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/total_liabilities"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_total_liabilities"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="3"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:textSize="20dp" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:text="@string/save"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:textSize="20dp" />
    </LinearLayout>

</ScrollView>
